kubernetes/apps/shlink-elwany/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink-server
  namespace: shlink-elwany
spec:
  selector:
    app: shlink-server
  ports:
    - port: 8080
      targetPort: 8080
