kubernetes/apps/shlink-elwany/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-server
  namespace: shlink-elwany
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - link.teamelwany.com
      secretName: link-teamelwany-com-tls
  rules:
    - host: link.teamelwany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-server
                port:
                  number: 8080
